# server-mcp-copy

./: .gitignore  Dockerfile  README.md  callback_server.py  docker-compose.yml  main.py  pyproject.toml  test.py  test_redis.py
src/application/auth/: ave_online_auth.py  google_auth_multiuser.py  google_jwks_client.py  oauth_service.py
src/application/dtos/agents/: agents_request_dto.py  agents_response_dto.py
src/application/dtos/cities/: city_response_dto.py
src/application/dtos/operators/: operator_dto.py
src/application/dtos/orders/: order_dto.py  order_response_dto.py
src/application/dtos/providers/: provider_response_dto.py
src/application/dtos/quote/: shipment_request_dto.py  shipping_quote_response_dto.py
src/application/dtos/sales_and_orders/: pedidos_dto.py  pedidos_response_dto.py
src/application/services/: agents_service.py  cities_service.py  operators_service.py  providers_service.py  purchase_order_service.py  quotation_service.py  sales_orders_service.py
src/application/use_cases/: create_massive_quote.py  create_order.py  create_quote.py  list_agents.py  list_operators.py  list_providers.py  pursache_order.py  search_cities.py
src/application/value_objects/: common.py
src/infrastructure/api/http/: ave_http_client.py
src/infrastructure/config/: common_config.py  redis_config.py
src/infrastructure/session/: session_service.py  user_session.py
src/tools/: logger_config.py
src/tools/base/: common.py  crypter.py  ip.py  token.py  user_mcp_info.py
src/tools/informational/: ave_online_tool.py
test/: redis_monitor.py
(+8 files in other folders)
